ajuste en texto

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <h1 class="display-4 mb-4">Hola, soy Sofía [tori] ✦</h1>
                     <h2 class="h4 mb-4">Desarrolladora Full Stack en formación</h2>
                     <p class="lead mb-5">
-                        Soy una desarrolladora que vive entre el arte y el código. 
+                        Me llamo Sofía Lagos, pero me conocen más como Tori, soy artista de profesión y desarrolladora en formación. 
                         Me apasiona crear experiencias web completas: desde diseñar interfaces 
                         atractivas hasta construir las bases de datos que las respaldan. 
                         Como artista visual, siempre busco que la tecnología y el diseño trabajen juntos. 
